infrastructure/method1-simple-kubectl/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
  labels:
    name: portfolio
    environment: development
